k8s/envs/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pbd-services
  labels:
    name: pbd-services
    environment: production
    project: itsm-api-server
