k8s/envs/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: itsm-api-server-prod
  namespace: pbd-services
  labels:
    app: itsm-api-server-prod
    environment: production
    project: itsm-api-server
spec:
  type: NodePort
  selector:
    app: itsm-api-server-prod
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
